--- a/css/grid.css
+++ b/css/grid.css
@@ -17,12 +17,12 @@ html {
     background-color: rgb(2, 0, 97);
     color: rgb(128, 238, 255);
     font-weight: 800;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 21px;
+    padding: 21px;
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:sans-serif,serif
   }
   
   #product_1, #product_2 {
